<resources>
    <string name="app_name">BMICalculator</string>
    <string name="calculate">Calculate</string>
    <string name="name">Name:</string>
    <string name="inputName"></string>
    <string name="hint_name">input your name</string>
    <string name="btn_enter">Enter</string>
    <string name="welcome">Welcome </string>
    <string name="weight_label">Weight:</string>
    <string name="height_label">Height:</string>
    <string name="hint_weight">enter your weight</string>
    <string name="status">Status:</string>
    <string name="hint_height">enter your height</string>
</resources>